--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
