--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
 		"email-validator": "^2.0.4",
 		"express": "^4.17.1",
 		"joi": "^17.4.0",
+		"jsonwebtoken": "^8.5.1",
 		"pg": "^8.5.1",
 		"sequelize": "^6.5.0"
 	},
