--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-redux": "^7.2.2",
     "react-responsive-modal": "^6.0.1",
     "react-router-dom": "^5.2.0",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8"
   }
