--- a/back/package.json
+++ b/back/package.json
@@ -11,13 +11,14 @@
 		"email-validator": "^2.0.4",
 		"express": "^4.17.1",
 		"express-jwt": "^6.0.0",
+		"express-rate-limit": "^5.2.6",
+		"helmet": "^4.6.0",
 		"joi": "^17.4.0",
 		"jsonwebtoken": "^8.5.1",
 		"nodemailer": "^6.5.0",
 		"pg": "^8.5.1",
 		"sequelize": "^6.5.0"
 	},
-	"devDependencies": {},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node index.js"
